# rust-vue-web-app

./: .gitignore  Cargo.toml  README.md
src/: main.rs
